Ajout de requestHeader

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
      <body>
           <article>
                <div id="header">
-                    <input type="text" placeholder="Ville" id="inputVille">
+                    <input type="text" placeholder="City" id="inputCity">
                     <input type="date" id="inputDate">
                     <img src="medias/search.png" alt="Rechercher..." id="search">
                </div>
