Icones refaits et partiellement reliés aux données

--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
                          <p>13°C</p>
                     </div>
                     <div id="sky">
-                         <img src="medias/sunny.png" alt="Sunny icon">
+                         <img src="medias/sun.png" alt="Sunny icon">
                          <p>Ensoleillé</p>
                     </div>
                     <div id="wind">
-                         <img src="medias/wind.png" alt="Wind icon">
+                         <img src="medias/wind-direction.png" alt="Wind icon">
                          <p>30km/h</p>
                     </div>
                </div>
