Ajout gestion d'erreurs

--- a/index.html
+++ b/index.html
@@ -15,8 +15,11 @@
      <body>
           <article>
                <div id="header">
-                    <input type="text" placeholder="City" id="inputCity">
+                    <input type="text" placeholder="Ville" id="inputCity">
                     <img src="medias/search.png" alt="Rechercher..." id="search">
+               </div>
+               <div id="errors">
+                    <p>Activez Javascript pour utiliser la météo.</p>
                </div>
                <div id="body">
                     <div id="temperature">
