Plus de détails météorologiques

--- a/index.html
+++ b/index.html
@@ -23,19 +23,21 @@
                </div>
                <div id="body">
                     <div id="temperature">
-                         <p>13°C</p>
+                         <div>
+                              <p></p>
+                              <p></p>
+                         </div>
                     </div>
                     <div id="sky">
-                         <img src="medias/sun.png" alt="Sunny icon">
-                         <p>Ensoleillé</p>
+                         <img src="" alt="">
+                         <p></p>
+                         <p></p>
                     </div>
                     <div id="wind">
                          <img src="medias/wind-direction.png" alt="Wind icon">
-                         <p>30km/h</p>
+                         <p></p>
+                         <p></p>
                     </div>
-               </div>
-               <div id="footer">
-                    <!-- Éphéméride -->
                </div>
           </article>
      </body>
