--- a/index.html
+++ b/index.html
@@ -39,6 +39,11 @@
                          <p></p>
                     </div>
                </div>
+               <div id="footer">
+                    <p id="categorieActive">Aujourd'hui</p>
+                    <p>3 jours</p>
+                    <p>1 semaine</p>
+               </div>
           </article>
      </body>
      <script src="main.js"></script>
