Ajout vue 3 jours et 1 semaine

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
           <link rel="icon" type="img/png" href="medias/logo.png">
      </head>
      <body>
-          <article>
+          <article id="article">
                <div id="header">
                     <input type="text" placeholder="Ville" id="inputCity">
                     <img src="medias/search.png" alt="Rechercher..." id="search">
@@ -22,21 +22,111 @@
                     <p>Activez Javascript pour utiliser la météo.</p>
                </div>
                <div id="body">
-                    <div id="temperature">
-                         <div>
+                    <div id="today">
+                         <div id="temperature">
+                              <div>
+                                   <p></p>
+                                   <p></p>
+                              </div>
+                         </div>
+                         <div id="sky">
+                              <img src="" alt="">
+                              <p></p>
+                              <p></p>
+                         </div>
+                         <div id="wind">
+                              <img src="medias/wind-direction.png" alt="Wind icon">
                               <p></p>
                               <p></p>
                          </div>
                     </div>
-                    <div id="sky">
-                         <img src="" alt="">
-                         <p></p>
-                         <p></p>
+                    <div id="threeDays">
+                         <div>
+                              <p>Lundi 16 mars</p>
+                              <img src="medias/sun.png" alt="">
+                              <div>
+                                   <p>8°C</p>
+                                   <p>17°C</p>
+                              </div>
+                              <div>
+                                   <p>16 km/h</p>
+                                   <img src="medias/wind-direction.png" alt="">
+                              </div>
+                         </div>
+                         <div>
+                              <p>Lundi 16 mars</p>
+                              <img src="medias/sun.png" alt="">
+                              <div>
+                                   <p>8°C</p>
+                                   <p>17°C</p>
+                              </div>
+                              <div>
+                                   <p>16 km/h</p>
+                                   <img src="medias/wind-direction.png" alt="">
+                              </div>
+                         </div>
+                         <div>
+                              <p>Lundi 16 mars</p>
+                              <img src="medias/sun.png" alt="">
+                              <div>
+                                   <p>8°C</p>
+                                   <p>17°C</p>
+                              </div>
+                              <div>
+                                   <p>16 km/h</p>
+                                   <img src="medias/wind-direction.png" alt="">
+                              </div>
+                         </div>
                     </div>
-                    <div id="wind">
-                         <img src="medias/wind-direction.png" alt="Wind icon">
-                         <p></p>
-                         <p></p>
+                    <div id="week">
+                         <div>
+                              <p>Lundi 16 mars</p>
+                              <img src="medias/sun.png" alt="">
+                              <div>
+                                   <p>8°C</p>
+                                   <p>17°C</p>
+                              </div>
+                              <div>
+                                   <p>16 km/h</p>
+                                   <img src="medias/wind-direction.png" alt="">
+                              </div>
+                         </div>
+                         <div>
+                              <p>Lundi 16 mars</p>
+                              <img src="medias/sun.png" alt="">
+                              <div>
+                                   <p>8°C</p>
+                                   <p>17°C</p>
+                              </div>
+                              <div>
+                                   <p>16 km/h</p>
+                                   <img src="medias/wind-direction.png" alt="">
+                              </div>
+                         </div>
+                         <div>
+                              <p>Lundi 16 mars</p>
+                              <img src="medias/sun.png" alt="">
+                              <div>
+                                   <p>8°C</p>
+                                   <p>17°C</p>
+                              </div>
+                              <div>
+                                   <p>16 km/h</p>
+                                   <img src="medias/wind-direction.png" alt="">
+                              </div>
+                         </div>
+                         <div>
+                              <p>Lundi 16 mars</p>
+                              <img src="medias/sun.png" alt="">
+                              <div>
+                                   <p>8°C</p>
+                                   <p>17°C</p>
+                              </div>
+                              <div>
+                                   <p>16 km/h</p>
+                                   <img src="medias/wind-direction.png" alt="">
+                              </div>
+                         </div>
                     </div>
                </div>
                <div id="footer">
