Vue 3 jours et 1 semaine fonctionelle

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
      <head>
           <meta charset="UTF-8">
-          <meta name="description" content="API qui récolte la météo et qui l'affiche.">
+          <meta name="description" content="Fourni la météo jusqu'à 1 semaine dans toutes les villes françaises. ">
           <meta name="viewport" content="width=device-width, initial-scale=1">
           <meta name="robots" content="index,follow">
           <title>Weather</title>
@@ -23,7 +23,7 @@
                </div>
                <div id="body">
                     <div id="today">
-                         <div id="temperature">
+                         <div class="temperature">
                               <div>
                                    <p></p>
                                    <p></p>
@@ -43,37 +43,37 @@
                     <div id="threeDays">
                          <div>
                               <p>Lundi 16 mars</p>
-                              <img src="medias/sun.png" alt="">
-                              <div>
-                                   <p>8°C</p>
-                                   <p>17°C</p>
+                              <img src="" alt="">
+                              <div class="temperature">
+                                   <p></p>
+                                   <p></p>
                               </div>
                               <div>
-                                   <p>16 km/h</p>
+                                   <p></p>
                                    <img src="medias/wind-direction.png" alt="">
                               </div>
                          </div>
                          <div>
                               <p>Lundi 16 mars</p>
-                              <img src="medias/sun.png" alt="">
-                              <div>
-                                   <p>8°C</p>
-                                   <p>17°C</p>
+                              <img src="" alt="">
+                              <div class="temperature">
+                                   <p></p>
+                                   <p></p>
                               </div>
                               <div>
-                                   <p>16 km/h</p>
+                                   <p></p>
                                    <img src="medias/wind-direction.png" alt="">
                               </div>
                          </div>
                          <div>
                               <p>Lundi 16 mars</p>
-                              <img src="medias/sun.png" alt="">
-                              <div>
-                                   <p>8°C</p>
-                                   <p>17°C</p>
+                              <img src="" alt="">
+                              <div class="temperature">
+                                   <p></p>
+                                   <p></p>
                               </div>
                               <div>
-                                   <p>16 km/h</p>
+                                   <p></p>
                                    <img src="medias/wind-direction.png" alt="">
                               </div>
                          </div>
@@ -82,7 +82,7 @@
                          <div>
                               <p>Lundi 16 mars</p>
                               <img src="medias/sun.png" alt="">
-                              <div>
+                              <div class="temperature">
                                    <p>8°C</p>
                                    <p>17°C</p>
                               </div>
@@ -94,7 +94,7 @@
                          <div>
                               <p>Lundi 16 mars</p>
                               <img src="medias/sun.png" alt="">
-                              <div>
+                              <div class="temperature">
                                    <p>8°C</p>
                                    <p>17°C</p>
                               </div>
@@ -106,7 +106,7 @@
                          <div>
                               <p>Lundi 16 mars</p>
                               <img src="medias/sun.png" alt="">
-                              <div>
+                              <div class="temperature">
                                    <p>8°C</p>
                                    <p>17°C</p>
                               </div>
@@ -118,7 +118,7 @@
                          <div>
                               <p>Lundi 16 mars</p>
                               <img src="medias/sun.png" alt="">
-                              <div>
+                              <div class="temperature">
                                    <p>8°C</p>
                                    <p>17°C</p>
                               </div>
@@ -135,6 +135,9 @@
                     <p>1 semaine</p>
                </div>
           </article>
+          <footer>
+               <p>Données par <a href="https://api.meteo-concept.com/">Météo Concept</a></p>
+          </footer>
      </body>
      <script src="main.js"></script>
 </html>
