Améliorations selon web.dev

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
           <title>Weather</title>
           <link rel="preconnect" href="https://fonts.googleapis.com">
           <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-          <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Red+Hat+Display&display=swap" rel="stylesheet">
+          <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Red+Hat+Display&display=swap" rel="stylesheet" defer>
           <link rel="stylesheet" type="text/css" href="main.css" >
           <link rel="icon" type="img/png" href="medias/logo.png">
      </head>
