Suppresion des textes brut dans catégories ThreeDays et Week

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     </div>
                     <div id="threeDays">
                          <div>
-                              <p>Lundi 16 mars</p>
+                              <p></p>
                               <img src="" alt="">
                               <div class="temperature">
                                    <p></p>
@@ -54,7 +54,7 @@
                               </div>
                          </div>
                          <div>
-                              <p>Lundi 16 mars</p>
+                              <p></p>
                               <img src="" alt="">
                               <div class="temperature">
                                    <p></p>
@@ -66,7 +66,7 @@
                               </div>
                          </div>
                          <div>
-                              <p>Lundi 16 mars</p>
+                              <p></p>
                               <img src="" alt="">
                               <div class="temperature">
                                    <p></p>
@@ -80,50 +80,50 @@
                     </div>
                     <div id="week">
                          <div>
-                              <p>Lundi 16 mars</p>
-                              <img src="medias/sun.png" alt="">
+                              <p></p>
+                              <img src="" alt="">
                               <div class="temperature">
-                                   <p>8°C</p>
-                                   <p>17°C</p>
+                                   <p></p>
+                                   <p></p>
                               </div>
                               <div>
-                                   <p>16 km/h</p>
+                                   <p></p>
                                    <img src="medias/wind-direction.png" alt="">
                               </div>
                          </div>
                          <div>
-                              <p>Lundi 16 mars</p>
-                              <img src="medias/sun.png" alt="">
+                              <p></p>
+                              <img src="" alt="">
                               <div class="temperature">
-                                   <p>8°C</p>
-                                   <p>17°C</p>
+                                   <p></p>
+                                   <p></p>
                               </div>
                               <div>
-                                   <p>16 km/h</p>
+                                   <p></p>
                                    <img src="medias/wind-direction.png" alt="">
                               </div>
                          </div>
                          <div>
-                              <p>Lundi 16 mars</p>
-                              <img src="medias/sun.png" alt="">
+                              <p></p>
+                              <img src="" alt="">
                               <div class="temperature">
-                                   <p>8°C</p>
-                                   <p>17°C</p>
+                                   <p></p>
+                                   <p></p>
                               </div>
                               <div>
-                                   <p>16 km/h</p>
+                                   <p></p>
                                    <img src="medias/wind-direction.png" alt="">
                               </div>
                          </div>
                          <div>
-                              <p>Lundi 16 mars</p>
-                              <img src="medias/sun.png" alt="">
+                              <p></p>
+                              <img src="" alt="">
                               <div class="temperature">
-                                   <p>8°C</p>
-                                   <p>17°C</p>
+                                   <p></p>
+                                   <p></p>
                               </div>
                               <div>
-                                   <p>16 km/h</p>
+                                   <p></p>
                                    <img src="medias/wind-direction.png" alt="">
                               </div>
                          </div>
