Ajout du watermark

--- a/index.html
+++ b/index.html
@@ -136,6 +136,7 @@
                </div>
           </article>
           <footer>
+               <p>Version Web</p>
                <p>Données par <a href="https://api.meteo-concept.com/">Météo Concept</a></p>
           </footer>
      </body>
