--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
           </article>
           <footer>
                <p>Version Web</p>
-               <p>Données par <a href="https://api.meteo-concept.com/">Météo Concept</a></p>
+               <p>Données par <a href="https://api.meteo-concept.com/" target="_blank">Météo Concept</a></p>
           </footer>
      </body>
      <script src="main.js"></script>
