Ajout des éléments principaux

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                               <nav id="atuiSearchServices_Header">
                                    <div>
                                         <form action="" method="post"><!-- Lier le fichier PHP dans action -->
-                                             <input name="atuiSearchServices_Request" type="text" placeholder="Faites une recherche...">
+                                             <input name="atuiSearchServices_Request" type="text" placeholder="Recherchez une ville">
                                              <button type="submit">
                                                   <img src="atui/SearchService/medias/search.png" alt="Rechercher">
                                              </button>
@@ -41,11 +41,6 @@
                                    <aside>
                                         <article>
                                              <p>Recherches récentes</p>
-                                             <div>
-                                             </div>
-                                        </article>
-                                        <article>
-                                             <p>Suggestions</p>
                                              <div>
                                              </div>
                                         </article>
@@ -61,13 +56,116 @@
                </aside>
                <article class="atuiKernel_ToolsCarousel">
                     <div>
+                         <div>
+                              <img src="patch/icons/rain.png" />
+                              <div>
+                                   <p>0%</p>
+                                   <p>0mm</p>
+                              </div>
+                         </div>
+                         <div>
+                              <p>Orange (84100)</p>
+                              <div>
+                                   <p>12°C</p>
+                                   <p>26°C</p>
+                              </div>
+                              <div>
+                                   <img src="patch/icons/wind-direction.png" />
+                                   <div>
+                                        <p>13km/h</p>
+                                        <p>28km/h</p>
+                                   </div>
+                              </div>
+                         </div>
                     </div>
                </article>
           </header>
           <section>
-               <table>
-                    <!-- Tableau des données -->
-               </table>
+               <div id="dataTable">
+                    <div>
+                         <div>
+                              <p>Jour</p>
+                         </div>
+                         <div>
+                              <p>Ciel</p>
+                         </div>
+                         <div>
+                              <p>Température</p>
+                         </div>
+                         <div>
+                              <p>Vent</p>
+                         </div>
+                    </div>
+                    <div>
+                         <div>
+                              <p>Mercredi 29 mars</p>
+                         </div>
+                         <div>
+                              <img src="patch/icons/sun.png"/>
+                              <div>
+                                   <p>0%</p>
+                                   <p>0mm</p>
+                              </div>
+                         </div>
+                         <div>
+                              <p>15°C</p>
+                              <p>23°C</p>
+                         </div>
+                         <div>
+                              <img src="patch/icons/wind-direction.png"/>
+                              <div>
+                                   <p>13km/h</p>
+                                   <p>26km/h</p>
+                              </div>
+                         </div>
+                    </div>
+                    <div>
+                         <div>
+                              <p>Mercredi 29 mars</p>
+                         </div>
+                         <div>
+                              <img src="patch/icons/sun.png"/>
+                              <div>
+                                   <p>0%</p>
+                                   <p>0mm</p>
+                              </div>
+                         </div>
+                         <div>
+                              <p>15°C</p>
+                              <p>23°C</p>
+                         </div>
+                         <div>
+                              <img src="patch/icons/wind-direction.png"/>
+                              <div>
+                                   <p>13km/h</p>
+                                   <p>26km/h</p>
+                              </div>
+                         </div>
+                    </div>
+                    <div>
+                         <div>
+                              <p>Mercredi 29 mars</p>
+                         </div>
+                         <div>
+                              <img src="patch/icons/sun.png"/>
+                              <div>
+                                   <p>0%</p>
+                                   <p>0mm</p>
+                              </div>
+                         </div>
+                         <div>
+                              <p>15°C</p>
+                              <p>23°C</p>
+                         </div>
+                         <div>
+                              <img src="patch/icons/wind-direction.png"/>
+                              <div>
+                                   <p>13km/h</p>
+                                   <p>26km/h</p>
+                              </div>
+                         </div>
+                    </div>
+               </div>
                <div class="atuiKernel_SectionText">
                     <p>Les données proviennent de l'<a href="https://api.meteo-concept.com/" target="_blank">API de Météo Concept</a>. </p>
                </div>
