Travaux sur HTML et CSS

--- a/index.html
+++ b/index.html
@@ -55,17 +55,17 @@
                     </div>
                </aside>
                <article class="atuiKernel_ToolsCarousel">
-                    <div>
-                         <div>
+                    <div id="today">
+                         <div id="todayFirstColumn">
                               <img src="patch/icons/rain.png" />
                               <div>
                                    <p>0%</p>
                                    <p>0mm</p>
                               </div>
                          </div>
-                         <div>
+                         <div id="todaySecondColumn">
                               <p>Orange (84100)</p>
-                              <div>
+                              <div class="temperature">
                                    <p>12°C</p>
                                    <p>26°C</p>
                               </div>
@@ -78,6 +78,7 @@
                               </div>
                          </div>
                     </div>
+                    <p id="error">Texte d'une erreur</p>
                </article>
           </header>
           <section>
@@ -130,7 +131,7 @@
                                    <p>0mm</p>
                               </div>
                          </div>
-                         <div>
+                         <div class="temperature">
                               <p>15°C</p>
                               <p>23°C</p>
                          </div>
@@ -153,7 +154,7 @@
                                    <p>0mm</p>
                               </div>
                          </div>
-                         <div>
+                         <div class="temperature">
                               <p>15°C</p>
                               <p>23°C</p>
                          </div>
