--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
           <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Red+Hat+Display&display=swap" rel="stylesheet">
           <link rel="stylesheet" type="text/css" href="atui/kernel/main.css" >
           <link rel="stylesheet" type="text/css" href="atui/SearchService/main.css">
-          <link rel="stylesheet" type="text/css" href="patch/main.css">
+          <link rel="stylesheet" type="text/css" href="patch/global.css">
+          <link rel="stylesheet" type="text/css" href="patch/today.css">
+          <link rel="stylesheet" type="text/css" href="patch/table.css">
           <link rel="icon" type="img/png" href="patch/icons/logo.png">
      </head>
      <body>
@@ -108,7 +110,7 @@
                                    <p>0mm</p>
                               </div>
                          </div>
-                         <div>
+                         <div class="temperature">
                               <p>15°C</p>
                               <p>23°C</p>
                          </div>
